--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   name: flask-app
   env: python
   buildCommand: ""
-  startCommand: gunicorn -w 4 app:app
+  startCommand: gunicorn -w 4 -b 0.0.0.0:8000 flask_app.app:app
   plan: free
   envVars:
   - key: FLASK_ENV
